# open_gl

./: README.md  full_screen.cpp  plantilla3D.cpp  tarea2_im15005.tar.xz
Actividad#2/Ventana/: CMakeLists.txt  main-tarea.cpp  ventana.cpp
Actividad#2/gluLookAt/: gluLookAt.cpp
Actividad#2/gluLookAt-45grad/: 45grad.cpp  CMakeLists.txt
Actividad2_im15005/Vista_frente/: gluLookAt.cpp
Actividad2_im15005/Vista_planta/: gluLookAt.cpp
Actividad2_im15005/Vista_tresLados/: gluLookAt.cpp
Actividad2_im15005/probando/: CMakeLists.txt  gluLookAt.cpp
Texto/: texto  texto.cpp  texto2  texto2.cpp
Varios/: avatar  avatar.cpp  camera.cpp  casa3D.cpp  etc  etc.cpp  ilu_camara  iluminacion  menus  tajMahal  tajMahal.cpp  text  text.cpp
VideoJuego_LaColmena/: CMakeLists.txt  main.cpp
VideoJuego_LaColmena/sources/: funciones.h
actividad140318/: CMakeLists.txt  README.md  actividad.cpp  main-linea.cpp
cubo/: CMakeLists.txt  cubo.cpp
dino_colision/: CMakeLists.txt  dino_controlFrame  dino_controlFrame.cpp  dino_game_colision.cpp
dino_game_optimizado/: CMakeLists.txt  dino_optimizado.cpp
ejercicios/: CMakeLists.txt  main-tarea.cpp
iluminacion/: CMakeLists.txt  esfera_ilu  esfera_ilu.cpp  material_iluminacion  material_iluminacion.cpp
laboratorio_2/: CMakeLists.txt  casa.cpp  cuarto.cpp  estadio.cpp  integrantes.txt  tierra.cpp
menu/: CMakeLists.txt  menu  menu-copia.cpp  menu.cpp
multiples_materiales/: CMakeLists.txt  control_luz  control_luz.cpp  multiples_materiales  multiples_materiales.cpp
parciales/parcial1/dino_im15005/: CMakeLists.txt  dino_parcial1_im15005  dino_parcial1_im15005.cpp
parciales/parcial1/murci_im15005/: CMakeLists.txt  murcielago_parcial1_im15005  murcielago_parcial1_im15005.cpp
parciales/parcial3_Im15005_gm15002/: CMakeLists.txt  main.cpp
parciales/parcial_2/Ejercicio1/: conos  conos.cpp
parque/: fog  parque.cpp
tarea/: bresenham.cpp  ec_primer_grado.cpp  ec_segundo_grado.cpp  onda_cotangente.cpp  onda_cuadrada_de_furrier.cpp  onda_tangente.cpp
tarea1/bresenham/: CMakeLists.txt  bresenham.cpp
tarea1/ec_primer_grado/: CMakeLists.txt
tarea1/ec_segundo_grado/: CMakeLists.txt
tarea1/onda_cotangente/: CMakeLists.txt  onda_cotangente.cpp
tarea1/onda_cuadrada_de_fourier/: CMakeLists.txt  onda_cuadrada_de_fourier.cpp
tarea1/onda_cuadrada_de_furrier/: CMakeLists.txt  onda_cuadrada_de_furrier.cpp
tarea1/onda_tangente/: CMakeLists.txt  onda_tangente.cpp
tarea2/Figuras_3D/casa/: CMakeLists.txt  casa3D.cpp
tarea2/Figuras_3D/columpio/: CMakeLists.txt  columpio3D.cpp
tarea2/casa/: CMakeLists.txt  casa.cpp  casa1.cpp
tarea2/chorro/: CMakeLists.txt  chorro.cpp
tarea2/columpios/: CMakeLists.txt  columpios.cpp
tarea2/engranajes/: CMakeLists.txt  engranajes.cpp
tarea2/isometrico/: CMakeLists.txt  isometrico.cpp
tarea2/puente/: CMakeLists.txt  puente.cpp
tarea3/: CMakeLists.txt  menu_mouse_im15005  menu_mouse_im15005.cpp
textura/: CMakeLists.txt  control_frame  control_frame.cpp  cubo  cubo_texturas  cubo_texturas.cpp  fog  fog.cpp  minmap  minmap.cpp  niebla  niebla.cpp  textura  textura.cpp
textura/800x600/pnm/: gato.pnm
